LATEST SNAPSHOT
---------------
- allow schema generation without open connection
- added DbColJson
- added DbColVarchar.setValueRestriction()
- allow to keep text representation for DbColGeometry bounding box (min,max1..3)
- PG: use postgis geometry types instead of AddGeometryColumn

ehisqlgen 1.13.6 (2018-09-05)
---------------------------
- GPKG: fixed java.util.NoSuchElementException if recursive FK

ehisqlgen 1.13.5 (2018-06-22)
---------------------------
- skip ';' without a stmt in front of it
- GPKG: ARRAY throws UnsupportedOperationException 
- GPKG: create canonical  loop-in-table-definition-error-message

ehisqlgen 1.13.4 (2018-03-06)
---------------------------
- GPKG: verify that create table statements are in a valid order

ehisqlgen 1.13.2 (2018-01-16)
---------------------------
- support parameters in sql scripts read by SqlReader
- skip ';' in DbUtility.readSqlStmt(); not part of SQL statement

ehisqlgen 1.12.0 (2017-11-28)
---------------------------
- PG: added ARRAY support

ehisqlgen 1.11.2 (2017-08-18)
---------------------------
- added DbUtility.fgdbTableExists()

ehisqlgen 1.11.1 (2017-06-22)
---------------------------
- PG: unique constraints changed to ST_AsBinary() for geometries 

ehisqlgen 1.11.0 (2017-06-19)
---------------------------
- added DbUtility, moved from ili2db

ehisqlgen 1.10.0 (2017-04-02)
---------------------------
- add DbColBlob
- add DbColXml
- fixed: make index name unique per schema 

ehisqlgen 1.9.0 (2016-12-21)
---------------------------
- add DbColNumber.min, max
- add DbColDecimal.min, max
- fixed FK constraint in GeoPackageGenerator

ehisqlgen 1.8.0 (2016-11-25)
---------------------------
- make GeneratorJdbc.addDropLine() public
- make GeneratorJdbc.addCreateLine() public

ehisqlgen 1.7.0 (2016-11-18)
---------------------------
- make constraint name unique and respect given max length

ehisqlgen 1.6.0 (2016-11-16)
---------------------------
- DbColVarchar default size set to UNLIMITED
