@@ -5,6 +5,7 @@ LATEST SNAPSHOT
 - added DbColVarchar.setValueRestriction()
 - allow to keep text representation for DbColGeometry bounding box (min,max1..3)
 - PG: use postgis geometry types instead of AddGeometryColumn
+- GPKG: support ARRAY mapping (to JSON)
 
 ehisqlgen 1.13.6 (2018-09-05)
 ---------------------------
